@@ -1,7 +1,11 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree keyword_open="1">
+<tree>
     <field name="date"/>
+    <field name="move"/>
+    <field name="origin" expand="1"/>
+    <field name="cumulative_quantity_start" expand="2"/>
     <field name="quantity" expand="2"/>
+    <field name="cumulative_quantity_end" expand="2"/>
 </tree>
